# career-sprint-agent

./: .gitignore  README.md  pyproject.toml
src/career_agent/: __init__.py  cli.py  config.py  mcp_server.py
src/career_agent/core/: __init__.py  library_monitor.py  models.py  storage.py
tests/: test_library_monitor.py
